--- a/package.json
+++ b/package.json
@@ -9,20 +9,30 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@emotion/cache": "^11.12.0",
+    "@emotion/react": "^11.12.0",
+    "@emotion/styled": "^11.12.0",
+    "@mui/icons-material": "^5.16.4",
+    "@mui/material": "^5.16.4",
+    "@mui/material-nextjs": "^5.16.4",
     "accept-language": "^3.0.18",
+    "clsx": "^2.1.1",
     "i18next": "^23.12.2",
     "i18next-browser-languagedetector": "^8.0.0",
     "i18next-resources-to-backend": "^1.2.1",
     "next": "14.2.5",
+    "number-counter": "^1.0.3",
     "react": "^18",
     "react-cookie": "^7.1.4",
     "react-dom": "^18",
-    "react-i18next": "^15.0.0"
+    "react-i18next": "^15.0.0",
+    "react-scroll": "^1.9.0"
   },
   "devDependencies": {
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
+    "@types/react-scroll": "^1.8.10",
     "eslint": "^8",
     "eslint-config-next": "14.2.5",
     "postcss": "^8",
