update: hero section

--- a/package.json
+++ b/package.json
@@ -26,7 +26,8 @@
     "react-cookie": "^7.1.4",
     "react-dom": "^18",
     "react-i18next": "^15.0.0",
-    "react-scroll": "^1.9.0"
+    "react-scroll": "^1.9.0",
+    "react-type-animation": "^3.2.0"
   },
   "devDependencies": {
     "@types/node": "^20",
