--- a/package.json
+++ b/package.json
@@ -21,9 +21,9 @@
     "i18next-browser-languagedetector": "^8.0.0",
     "i18next-resources-to-backend": "^1.2.1",
     "next": "14.2.5",
-    "number-counter": "^1.0.3",
     "react": "^18",
     "react-cookie": "^7.1.4",
+    "react-countup": "^6.5.3",
     "react-dom": "^18",
     "react-i18next": "^15.0.0",
     "react-scroll": "^1.9.0",
